Fix property grid position on Built by Ben page
Tab bar spacer was removed when hiding the menu, leaving only the negative
margin-top that pulled the grid too high. Changed to positive 4em top margin.

--- a/css/ben-lee-properties.webflow.css
+++ b/css/ben-lee-properties.webflow.css
@@ -5242,7 +5242,7 @@ figcaption {
 }
 
 .padding-listing-3 {
-  margin-top: -4.5em;
+  margin-top: 4em;
   padding-bottom: 5em;
 }
 
